--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,5 @@
 {
-  "HOME_1": "The KCC staking protocol currently has {{asset}}",
-  "HOME_2": "of KCS staking   ",
-  "HOME_3": "of rewards paid ",
+  "HOME_1": "The KCC staking protocol currently has <number>{{totalKCS}}</number> of KCS staking <number>{{totalRewards}}</number> of rewards paid <number>{{apy}}%</number> APY",
   "HOME_4": "APY",
   "HOME_5": "Stake Now",
   "HOME_6": "Staking, Vote and get rewards in 4 steps",
@@ -66,7 +64,6 @@
   "HOME_69": "twitter:title",
   "HOME_70": "description",
   "HOME_71": "FAQ",
-
   "STAKE_1": "Unstaking confirmed!",
   "STAKE_2": "Unstake",
   "STAKE_3": "View transaction on chain.",
@@ -154,7 +151,6 @@
   "STAKE_85": "Staked amount",
   "STAKE_86": "keywords",
   "STAKE_87": "Staked Balance",
-
   "DIFI_1": "Liquidity",
   "DIFI_2": "Use sKCS across the DeFi ecosystem",
   "DIFI_3": "Use sKCS in liquidity mining pools",
@@ -181,38 +177,36 @@
   "DIFI_24": "Collateral factor",
   "DIFI_25": "twitter:card",
   "DIFI_26": "summary",
-  "DIFI_27": "twitter:title",  
+  "DIFI_27": "twitter:title",
   "DEFI_28": "keywords",
-
   "ERROR_1": "Sorry,Not Found.",
-
-  "COMPONENT_1": "CopyRight © {{asset}} sKCS.io All Rights Reserved.", 
-  "COMPONENT_2": "Connect Wallet", 
-  "COMPONENT_3": "Amount", 
-  "COMPONENT_4": "Insufficient balance", 
-  "COMPONENT_5": "Please connect your wallet", 
-  "COMPONENT_6": "Please enter a valid number with up to 18 decimal places.", 
-  "COMPONENT_7": "The amount exceeds the available balance.", 
-  "COMPONENT_8": "The amount must be greater than 0.", 
-  "COMPONENT_9": "The amount must be greater than 0.", 
-  "COMPONENT_10": "Max", 
-  "COMPONENT_11": "View transaction in blockchain", 
-  "COMPONENT_12": "My Wallet", 
-  "COMPONENT_13": "Network", 
-  "COMPONENT_14": "Wallet Address", 
-  "COMPONENT_15": "Please select one of the wallets in the list", 
-  "COMPONENT_16": "Connect Your Wallet", 
-  "COMPONENT_17": "Please connect your wallet with one of the wallet providers", 
-  "COMPONENT_18": "Unicorn Contest", 
-  "COMPONENT_19": "Unsupported Network", 
-  "COMPONENT_20": "Provider Error", 
-  "COMPONENT_21": "No provider was found", 
-  "COMPONENT_22": "Provider Error", 
-  "COMPONENT_23": "Authorization Error", 
-  "COMPONENT_24": "Please authorize to access your account", 
-  "COMPONENT_25": "Authorization Error", 
-  "COMPONENT_26": "Unknown error", 
-  "COMPONENT_27": "Can't find connector", 
-  "COMPONENT_28": "The connector config is wrong", 
+  "COMPONENT_1": "CopyRight © {{asset}} sKCS.io All Rights Reserved.",
+  "COMPONENT_2": "Connect Wallet",
+  "COMPONENT_3": "Amount",
+  "COMPONENT_4": "Insufficient balance",
+  "COMPONENT_5": "Please connect your wallet",
+  "COMPONENT_6": "Please enter a valid number with up to 18 decimal places.",
+  "COMPONENT_7": "The amount exceeds the available balance.",
+  "COMPONENT_8": "The amount must be greater than 0.",
+  "COMPONENT_9": "The amount must be greater than 0.",
+  "COMPONENT_10": "Max",
+  "COMPONENT_11": "View transaction in blockchain",
+  "COMPONENT_12": "My Wallet",
+  "COMPONENT_13": "Network",
+  "COMPONENT_14": "Wallet Address",
+  "COMPONENT_15": "Please select one of the wallets in the list",
+  "COMPONENT_16": "Connect Your Wallet",
+  "COMPONENT_17": "Please connect your wallet with one of the wallet providers",
+  "COMPONENT_18": "Unicorn Contest",
+  "COMPONENT_19": "Unsupported Network",
+  "COMPONENT_20": "Provider Error",
+  "COMPONENT_21": "No provider was found",
+  "COMPONENT_22": "Provider Error",
+  "COMPONENT_23": "Authorization Error",
+  "COMPONENT_24": "Please authorize to access your account",
+  "COMPONENT_25": "Authorization Error",
+  "COMPONENT_26": "Unknown error",
+  "COMPONENT_27": "Can't find connector",
+  "COMPONENT_28": "The connector config is wrong",
   "COMPONENT_29": "Can't find connector"
 }
