--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -61,6 +61,7 @@
     "STAKE_31": "How can I use sKCS?",
     "STAKE_32": "The sKCS token will have a range of use cases in the KCC ecosystem. They allow you to access DeFi market while enjoying your staking rewards and helping the network. For example:",
     "STAKE_33": "Borrowing\/Lending - sKCS can be used as collateral or borrowed on multiple platforms.",
+    "STAKE_34": "Liquidity provision - sKCS/XXX pools - These pools will be subject to impermanent loss but will allow you to provide liquidity on a large number of pairs.",
     "STAKE_35": "Market Data",
     "STAKE_36": "Total staked amount",
     "STAKE_37": "Stakers",
@@ -135,6 +136,5 @@
     "HOME_3": "{{skcs}} sKCS redeemed for {{kcs}} KCS",
     "HOME_4": "Withdrawal confirmed!",
     "Withdraw failed!": "Withdraw failed!",
-    "Withdraw Notification": "Withdraw {{amount}} KCS successfully!",
-    "STAKE_34": "Liquidity provision - sKCS\/XXX pools - These pools will be subject to impermanent loss but will allow you to provide liquidity on a large number of pairs."
+    "Withdraw Notification": "Withdraw {{amount}} KCS successfully!"
 }
